--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -674,68 +674,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_id\" in DeployedModel has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_id\" in DeployedModel has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
       "  warnings.warn(\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in HuggingFaceLLM has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_name\" in HuggingFaceLLM has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
       "  warnings.warn(\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_kwargs\" in HuggingFaceLLM has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_kwargs\" in HuggingFaceLLM has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
       "  warnings.warn(\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in HuggingFaceInferenceAPI has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_name\" in HuggingFaceInferenceAPI has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
       "  warnings.warn(\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in TextGenerationInference has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_name\" in TextGenerationInference has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
       "  warnings.warn(\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_url\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_url\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
       "  warnings.warn(\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_path\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_path\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
       "  warnings.warn(\n",
-      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_kwargs\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
+      "c:\\Users\\ADMIN\\miniconda3\\envs\\kap_env2\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:132: UserWarning: Field \"model_kwargs\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
       "\n",
       "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
-      "  warnings.warn(\n",
-      "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
+    "import torch\n",
+    "torch.set_default_device('cuda:0')\n",
     "from src.llm import LLMProcessor\n",
-    "llm = LLMProcessor(\"prompt.txt\", \"docs\")"
+    "llm = LLMProcessor(\"prompt.txt\", \"docs\", model_url=\"https://huggingface.co/QuantFactory/Meta-Llama-3-8B-Instruct-GGUF/resolve/main/Meta-Llama-3-8B-Instruct.Q4_K_M.gguf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLM: Setting an engine for user user\n"
+      "Creating chat store for username user\n"
      ]
     }
    ],
@@ -758,12 +759,12 @@
     "Ввод: Иван Мухин. Только так и никак иначе. Вывод: Иван Мухин.\n",
     "Ввод: Мухин Иван. Я люблю свою фамилию. Вывод: Иван Мухин.\n",
     "\"\"\"\n",
-    "llm.set_engine(user_name=None, reset=True, custom_system_prompt=custom_prompt)"
+    "llm.set_engine(user_name=None, user_gender=\"F\", reset=True, custom_system_prompt=custom_prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -776,37 +777,38 @@
       "Меня зовут Крис -> Крис\n",
       "Меня зовут Джон Доу -> Джон\n",
       "Меня зовут Владимир Путин -> Владимир\n",
-      "Звать Любовь не надо, явится незваной -> \n",
-      "Зови меня зайкой -> \n",
+      "Звать Любовь не надо, явится незваной -> Любовь\n",
+      "Зови меня зайкой -> Заяц\n",
       "Меня зовут Сирано де Бержерак. -> Сирано\n",
-      "Бонд. Джеймс Бонд. -> Bond\n",
+      "Бонд. Джеймс Бонд. -> \n",
       "Василий и Петька -> Василий\n",
       "Джеймс Кэмерон -> Джеймс\n",
       "Сергей Капица -> Сергей\n",
       "Рината Литвинова -> Ринат\n",
       "Меня зовут Иван Артемьевич Пупкин, но для друзей я Ванечка. -> Ванечка\n",
-      "Беруши в уши -> \n",
+      "Беруши в уши -> Вывод: береусь\n",
       "Кофе с молоком -> \n",
       "Какашка -> \n",
-      "Неоценимый вклад в науку -> \n",
-      "Bond. James Bond -> Bond\n",
+      "Неоценимый вклад в науку -> Вот, неоценимый вклад в науку\n",
+      "Bond. James Bond -> \n",
       "Я скрываю своё имя, ведь это не главное. У меня есть кличка Виктор. -> Виктор\n",
       "Морозов Илья. Называй меня только так и никак иначе. Обращайся по имени и фамилии. -> Морозов илья\n",
       "Меня зовут Эван. Но я люблю, чтобы ко мне обращались Гипергалактус. -> Гипергалактус\n",
       "Внутри меня живёт маленький человек, но ты, раб, зови меня Господином. -> Господин\n",
-      "Иисус Яхвевович. -> Иисус\n",
+      "Иисус Яхвевович. -> Иисус яхвевович\n",
       "Белая лилия. -> \n",
       "Трактор. -> \n",
       "Трактор. Только не смейтесь. Меня и правда так зовут. -> Трактор\n",
-      "Домовёнок Буба. -> \n",
+      "Домовёнок Буба. -> Буба\n",
       "Артемий Лебедев -> Артемий\n",
-      "Гай Юлий Цезарь -> Цезарь\n",
+      "Гай Юлий Цезарь -> \n",
       "Царь. Просто Царь. -> \n",
       "Натусик я! -> Натусик\n",
       "Морская черепашка по имени Наташка -> Наташка\n",
-      "Мерилин Монро -> Мерилин\n",
+      "Мерилин Монро -> \n",
       "Альберт Эйнштейн -> Альберт\n",
-      "Ахмед аль Махмуд -> Ахмед\n"
+      "Ахмед аль Махмуд -> Ахмед\n",
+      "<eksdfjksfh kj> -> \n"
      ]
     }
    ],
@@ -848,7 +850,8 @@
     "    \"Морская черепашка по имени Наташка\",\n",
     "    \"Мерилин Монро\",\n",
     "    \"Альберт Эйнштейн\",\n",
-    "    \"Ахмед аль Махмуд\"\n",
+    "    \"Ахмед аль Махмуд\",\n",
+    "    \"<eksdfjksfh kj>\"\n",
     "    ]:\n",
     "    llm.chat_engine.reset()\n",
     "    user_name = llm.chat_engine.chat(user_answer).response\n",
@@ -1791,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2072,11 +2075,39 @@
     "z, sr, notation = m2(y)\n",
     "sf.write(\"MPSENet_DNS+VB.wav\", z, sr) # number of repeats doesn't affect the result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " а вы, как вы помните это мгновение?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "test_str = '(улыбается) а вы, как вы помните это мгновение?'\n",
+    "processed_str = re.sub(r\"\\([ а-яА-Яa-zA-Z0–9]+\\)\", \"\", test_str)\n",
+    "print(processed_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "kap_env2",
    "language": "python",
    "name": "python3"
   },
